<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <!-- Login Flow -->
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.myapplication.ui.screens.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.myapplication.ui.screens.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_assessment"
            app:destination="@id/navigation_assessment"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_assessment"
        android:name="com.example.myapplication.ui.screens.assessment.AssessmentFragment"
        android:label="@string/initial_assessment"
        tools:layout="@layout/fragment_assessment">
        <action
            android:id="@+id/action_assessment_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main Navigation -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.screens.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_vip"
            app:destination="@id/navigation_vip" />
    </fragment>

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.myapplication.ui.screens.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.myapplication.ui.screens.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.screens.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_vip"
            app:destination="@id/navigation_vip" />
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_profile_to_profile_edit"
            app:destination="@id/navigation_profile_edit" />
        <action
            android:id="@+id/action_profile_to_workout_history"
            app:destination="@id/navigation_workout_history" />
        <action
            android:id="@+id/action_profile_to_achievements"
            app:destination="@id/navigation_achievements" />
        <action
            android:id="@+id/action_profile_to_badge_wall"
            app:destination="@id/navigation_badge_wall" />
    </fragment>

    <!-- Settings Page -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.screens.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Profile Edit Page -->
    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.example.myapplication.ui.screens.profile.ProfileEditFragment"
        android:label="编辑个人信息"
        tools:layout="@layout/fragment_profile_edit" />

    <!-- Workout History Page -->
    <fragment
        android:id="@+id/navigation_workout_history"
        android:name="com.example.myapplication.ui.screens.profile.WorkoutHistoryFragment"
        android:label="训练记录"
        tools:layout="@layout/fragment_workout_history" />

    <!-- Achievements Page -->
    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.myapplication.ui.screens.profile.AchievementsFragment"
        android:label="我的成就"
        tools:layout="@layout/fragment_achievements" />

    <!-- Badge Wall Page -->
    <fragment
        android:id="@+id/navigation_badge_wall"
        android:name="com.example.myapplication.ui.screens.profile.BadgeWallFragment"
        android:label="徽章墙"
        tools:layout="@layout/fragment_badge_wall" />

    <!-- VIP Page -->
    <fragment
        android:id="@+id/navigation_vip"
        android:name="com.example.myapplication.ui.screens.vip.VipFragment"
        android:label="@string/vip_page"
        tools:layout="@layout/fragment_vip" />

</navigation>
